<resources>
    <string name="app_name">BluebankApp</string>
    <string name="action_manage_accounts">Manage accounts</string>
    <string name="action_reports">Report Module</string>
    <!-- Strings used for fragments for navigation -->
    <string name="main_fragment_label">Bluebank</string>
    <string name="manage_accounts_fragment_label">Manage accounts</string>
    <string name="create_account_fragment_label">Create account</string>
    <string name="manage_transactions_fragment_label">Manage transactions</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="welcome_label">Welcome to Bluebank</string>
    <string name="welcome_text">For operations, please press the Options menu</string>
    <string name="button_create_account">Create Account</string>
    <string name="button_create_transaction">Create Transaction</string>
    <string name="account_successfully_created">Account successfully created!</string>
    <string name="account_already_exists">Account already exists!</string>
    <string name="account_id_invalid">Account id is invalid!</string>
    <string name="balance_invalid">Balance is invalid!</string>
    <string name="account_id">Account ID (6 Digits)</string>
    <string name="amount">Insert the amount</string>
    <string name="balance">Balance</string>
    <string name="balance_label">Balance:</string>
    <string name="unkown_account">Unkown account</string>
    <string name="savings_account">Savings account</string>
    <string name="checking_account">Checking account</string>
    <string name="city">City:</string>
    <string name="transactions_history">Transactions history:</string>
    <string name="transactions_successfully_created">Transaction successfully created!</string>
    <string name="invalid_account">Invalid account</string>
    <string name="invalid_amount">Invalid amount</string>
    <string name="transaction_date">Transaction Date:</string>
    <string name="display_date_format">dd MMM yyyy HH:mm:ss</string>
    <string name="not_implemented_message">Not implemented yet!</string>

    <!--    <string name="lorem_ipsum">-->
<!--        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris-->
<!--        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus-->
<!--        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad-->
<!--        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend-->
<!--        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,-->
<!--        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n-->
<!--        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus-->
<!--        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed-->
<!--        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada-->
<!--        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,-->
<!--        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor-->
<!--        bibendum, vel congue leo egestas.\n\n-->
<!--        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit-->
<!--        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,-->
<!--        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer-->
<!--        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at-->
<!--        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,-->
<!--        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque-->
<!--        est.\n\n-->
<!--        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.-->
<!--        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui-->
<!--        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In-->
<!--        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,-->
<!--        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra-->
<!--        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a-->
<!--        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus-->
<!--        convallis.\n\n-->
<!--        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et-->
<!--        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa-->
<!--        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,-->
<!--        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper-->
<!--        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus-->
<!--        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus-->
<!--        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.-->
<!--    </string>-->
</resources>
