<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreateAccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <LinearLayout
            android:id="@+id/linearLayoutForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/editTextAccountId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_id"
                android:maxLength="6"
                android:paddingBottom="16dp" />


            <EditText
                android:id="@+id/editTextBalance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/balance"
                android:paddingBottom="16dp" />

            <Spinner
                android:id="@+id/spinnerAccountType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp" />

            <Spinner
                android:id="@+id/spinnerCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/cities_array"
                android:paddingBottom="16dp" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_create_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutForm" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>